// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas del componente GifGrid debe mostrar correctamente el componente  1`] = `
<Fragment>
  <h3>
    The Promised Neverland
  </h3>
  <LoadingComponent />
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas del componente GifGrid should change the snapshot when useFetchGifs is executed 1`] = `
<Fragment>
  <h3>
    The Promised Neverland
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="TPN"
      key="TPN"
      title="THE PROMISED NEVERLAND"
      url="https://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="WEP"
      key="WEP"
      title="WONDER EGG PRIORITY"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
